<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_order" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_orders" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pizzaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1" />

</LinearLayout>